Fix Pages: control bundler install order and add ruby platform

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -25,13 +25,20 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: "3.2"
-          bundler-cache: true
+
+      - name: Install Bundler
+        run: gem install bundler
+
+      - name: Add ruby platform to lockfile
+        run: bundle lock --add-platform ruby
+
       - name: Install gems
         env:
           NOKOGIRI_USE_SYSTEM_LIBRARIES: true
         run: |
-          gem install bundler
+          bundle config set force_ruby_platform true
           bundle install --jobs 4 --retry 3
+
       - name: Build with Jekyll
         run: bundle exec jekyll build --trace
 
