Update about page, publications, navigation, and NLoS project

--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,7 @@ contact_note: >
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   Graduate researcher in robotics and autonomous driving. Focused on multimodal sensor fusion and NLoS perception.
 footer_text: >
-  Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
-  Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
-  Photos from <a href="https://unsplash.com" target="_blank">Unsplash</a>.
+    © 2026 Hee-Yeun Kim · Seoul National University
 keywords: Sensor fusion, NLoS, Robotics, Autonomous vehicle # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: 🤖 # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
