Fix projects rendering

--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -26,7 +26,7 @@ github_username: hiyeun
 # lastfm_id: # your lastfm id
 # lattes_id: # your ID on Lattes (Brazilian Lattes CV)
 # leetcode_id: # your LeetCode id
-linkedin_username: Hee-Yeun Kim
+linkedin_username: https://www.linkedin.com/in/hee-yeun-kim-7b399038a/
 # mastodon_username: # your mastodon instance+username in the format instance.tld/@username
 # medium_username: # your Medium username
 # orcid_id: # your ORCID ID
@@ -36,7 +36,7 @@ linkedin_username: Hee-Yeun Kim
 # quora_username: # your Quora username
 # research_gate_profile: # your profile on ResearchGate
 # rss_icon: true # comment this line to hide the RSS icon
-scholar_userid: qc6CJjYAAAAJ # your Google Scholar ID
+scholar_userid: xL0pvVIAAAAJ # your Google Scholar ID
 # scopus_id: # your profile on Scopus
 # semanticscholar_id: # your Semantic Scholar ID
 # spotify_id: # your spotify id
