Fix projects collection and category

--- a/_config.yml
+++ b/_config.yml
@@ -155,6 +155,8 @@ collections:
     output: true
   projects:
     output: true
+    permalink: /projects/:path/
+
 
 # -----------------------------------------------------------------------------
 # Jekyll settings
