--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -26,7 +26,7 @@ github_username: hiyeun
 # lastfm_id: # your lastfm id
 # lattes_id: # your ID on Lattes (Brazilian Lattes CV)
 # leetcode_id: # your LeetCode id
-linkedin_username: https://www.linkedin.com/in/hee-yeun-kim-7b399038a/
+linkedin_username: Hee-Yeun Kim
 # mastodon_username: # your mastodon instance+username in the format instance.tld/@username
 # medium_username: # your Medium username
 # orcid_id: # your ORCID ID
